    * "set slice clipping", "get slice clipping" [James, Ralph]
    * "create grid", "slice is grid", "set grid columns",
      "get grid columns", "set grid rows", "get grid rows",
      "show grid", "grid is shown" [James]
    * "load slice collection" [James]
    * "add hero" command now returns the party slot it added the hero
      to, or -1 if the party is full. [James]

  * Vikings of Midgard

  * Stuff only Developers Will Notice

Mar ? 2010 [Ypsiliform+3]

  * Bugfixes
    * Bug 816: Freeze on attack instead-chaining on multi-stage chains
    * The "leader" command has never worked.
    * "set dead heroes gain experience" did nothing.

Feb 8 2010 [Ypsiliform+2]

  * Bugfixes
    * Bug 815: Trailblazers Frozen
    * Fix crash when saving an empty menu

Jan 24 2010 [Ypsiliform+1]

  * Bugfixes
    * Bug 802: tileset confusion when adding a layer
    * Bug 812: crash after adding a new spriteset while in
      full-set mode
    * Bug 813: crash and map corruption when linking doors to a
      map with more than 3 layers
    * Bug 814: F12 for screenshots not working for SDL backend
    * No longer prevents importing WAV files over 500k in size
      (they often become smaller than 500k when converted to ogg)
    * Fix missing "Quit Editing" on main menu
    * Fix palette browser to update added palettes and to not
      crash the sprite editor.

Jan 08 2010 [Ypsiliform]

  * New Features
    * Press F1 anywhere in custom for help [James, Ralph, Msw, NN]
    * Plotscripting can now load sprites, and place them on screen.
      [Mike, James]
    * Limit on maximum items has been raised from 254 to 32000 [James]
    * Limit on how many item slots you have in your inventory has been
      raised from 198 to 600. You can also manually choose a smaller
      maximum. [James]
    * The hero editor now has an "Equipment" submenu which provides a
      convenient way to choose which items a hero can equip without
      needing to go back to the item editor [James]